# listen

./: .SRCINFO  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  RELEASE.md  _config.yml  config.py  conftest.py  index.html  install.sh  listen.py  pytest.ini  release.sh  requirements.txt  run_tests.sh  test_config.py  test_listen.py  test_signal_mode.sh
src/: audio.rs  cli.rs  config.rs  error.rs  main.rs  transcribe.rs
termux/: build.sh
