[package]
name = "listen"
version = "2.1.0"
edition = "2021"
authors = ["Guillermo Quinteros <gu.quinteros@gmail.com>"]
description = "Minimal audio transcription tool - 100% on-premise"
license = "MIT"
repository = "https://github.com/gmoqa/listen"

[[bin]]
name = "listen"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Audio
cpal = "0.15"
hound = "3.5"

# Whisper
whisper-rs = { version = "0.15", features = [] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
